samples/_failures_safe/1761553931_b4ee59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e690f31.c: In function ‘main’:
./samples/SAFE/__tmp_4e690f31.c:144:16: error: missing terminating " character
  144 |         printf("Invalid input for rows\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e690f31.c:144:9: error: expected expression at end of input
  144 |         printf("Invalid input for rows\n
      |         ^~~~~~
./samples/SAFE/__tmp_4e690f31.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e690f31.c:144:9: error: expected declaration or statement at end of input
